Port to Fabric 1.21.1 and verify Cobblemon compatibility